# EventGoMajorProject

./: .gitignore  docker-compose.yml  pyproject.toml
authuser/: models.py  urls.py  views.py
authuser/migrations/: 0001_initial.py
eventgo/: asgi.py  settings.py  urls.py  wsgi.py
eventorganizer/: admin.py  forms.py  models.py  mqtt_consumer.py  urls.py  views.py
eventorganizer/migrations/: 0001_initial.py  0002_event_address_event_date_event_latitude_and_more.py  0003_message.py  0004_rename_message_message_content_and_more.py
media/: municipality_names(GaPa_NaPa).json
templates/: base.html  login.html  register.html
templates/normal/: dashboard.html  event_search.html  map.html  messages.html  nearest.html  save_preferences.html  update_preferences.html
templates/organizer/: create_event.html  event_detail.html  event_list.html  update_event.html
