[tool.poetry]
name = "eventgomajorproject"
version = "0.1.0"
description = ""
authors = ["JenishBhuju <jnishvuzu@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.2"
psycopg2-binary = "^2.9.9"
django-cors-headers = "^4.3.1"
pillow = "^10.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
